css/custom.css
html, body {
  margin: 0;
  padding: 0;
  font-family: 'Open Sans', sans-serif; }

#social > * {
  vertical-align: middle; }

h2.page-title {
  font-size: 2em;
  text-transform: uppercase;
  color: #ea504e;
  letter-spacing: 3px;
  text-shadow: 0 1px 0 rgba(128, 128, 128, 0.5); }

h5.page-subtitle {
  margin-top: 0;
  color: lightgray;
  text-transform: uppercase;
  letter-spacing: 1px; }

/**
  HEADER AREA
*/
div#header {
  padding: 0.5% 1% 1%;
  border: 1px solid whitesmoke;
  border-width: 0 0 1px; }
  div#header a#header-logo {
    position: absolute;
    top: 6px;
    left: 0;
    padding: 0.5%; }
    div#header a#header-logo img {
      height: 50px; }
  div#header nav {
    width: 100%;
    text-align: right; }
    div#header nav ul {
      width: 100%;
      list-style-type: none;
      margin-top: 12px;
      margin-bottom: 0;
      padding: 0;
      word-spacing: -0.26em; }
      div#header nav ul li {
        display: inline-block;
        list-style: none;
        padding: 0 1.5%;
        word-spacing: initial;
        margin-right: -1px;
        text-transform: uppercase;
        letter-spacing: 2px;
        font-size: 12px;
        vertical-align: middle; }
        div#header nav ul li:last-child {
          padding-right: 0;
          margin-top: -3px; }
        div#header nav ul li:first-child {
          padding-left: 0; }
        div#header nav ul li a.subscribe-icon {
          opacity: 0.3;
          display: inline-block;
          vertical-align: middle; }
          div#header nav ul li a.subscribe-icon:hover {
            opacity: 0.9;
            transition: opacity .5s ease-out;
            -moz-transition: opacity .5s ease-out;
            -webkit-transition: opacity .5s ease-out;
            -o-transition: opacity .5s ease-out; }
          div#header nav ul li a.subscribe-icon img {
            height: 2em;
            width: 2em; }
    div#header nav::after {
      clear: both; }

/** FOOTER */
footer {
  width: 100%;
  text-align: center;
  padding-bottom: 10px; }

a {
  text-decoration: none;
  color: #147FD7; }
  a:hover {
    text-decoration: underline; }
  a.contribute {
    padding: 3px 8px;
    background-color: #ea504e;
    color: white;
    font-size: 11px;
    vertical-align: middle;
    border-radius: 3px;
    display: inline-block; }
    a.contribute.contribute-big {
      font-weight: bold;
      font-size: 12px;
      background-color: #F55B5B;
      padding: 12px 32px;
      letter-spacing: 0.15em;
      margin: 0.3em auto 0;
      border-radius: 3px;
      padding: 0.7rem 1.7rem; }
      a.contribute.contribute-big:hover {
        text-decoration: none;
        background-color: #ea504e; }
  a.button-rsvp {
    background-color: #F55B5B;
    display: inline-block;
    padding: 0.5em 0.9em;
    font-size: 0.8em;
    color: white;
    font-weight: bold;
    border-radius: 3px;
    text-indent: 0.15em;
    letter-spacing: 0.15em; }
    a.button-rsvp:hover {
      text-decoration: none;
      background-color: #ea504e; }
    a.button-rsvp + span.rsvp-counter {
      padding-left: 1em;
      font-size: 0.8em;
      color: #F55B5B;
      font-weight: bold;
      letter-spacing: 0.15em; }

body {
  font-family: 'Open Sans', sans-serif;
  color: #333333; }

section {
  width: 100%;
  text-align: center; }
  section > div#map-container {
    display: inline-block;
    width: 698px;
    float: left;
    padding: 0.5% 10px; }
  section > div#map-event-list {
    width: 450px;
    float: right;
    padding: 0.5% 10px 0.5% 10px; }

.axis text {
  font: 10px sans-serif; }

.axis path,
.axis line {
  fill: none;
  stroke: #000;
  shape-rendering: crispEdges; }

.hexagon {
  fill: none;
  stroke: #333333;
  stroke-width: 0.25px; }
  .hexagon.highlight {
    fill: #ea504e !important; }

.state-label {
  font-family: sans-serif;
  fill: #333333;
  font-size: 12px;
  font-weight: bold; }
  .state-label.highlight {
    fill: white !important; }

.state-label, .hexagon {
  cursor: pointer; }

#map-event-list {
  text-align: left; }
  #map-event-list > h2 {
    text-align: left; }
  #map-event-list ul {
    list-style: none;
    padding: 0;
    margin: 0; }
    #map-event-list ul li {
      padding: 0;
      margin: 0;
      margin-top: 10px;
      border: 1px dotted #eaeaea;
      border-width: 0 0 1px 0; }
      #map-event-list ul li:last-child {
        border: none; }
      #map-event-list ul li p {
        padding: 0; }

sub {
  margin: 1%; }

div#social {
  margin: 0 1%; }

#map-event-list li.event-nationwide-item a[href='javascript: void(0);'], #map-event-list li.event-list-item a[href='javascript: void(0);'] {
  color: #333333;
  text-decoration: none;
  cursor: text; }
#map-event-list li.event-nationwide-item h5, #map-event-list li.event-list-item h5 {
  margin-bottom: 0; }
#map-event-list li.event-nationwide-item h3, #map-event-list li.event-list-item h3 {
  margin-top: 0;
  margin-bottom: 0; }
#map-event-list li.event-nationwide-item h4.event-organizer, #map-event-list li.event-list-item h4.event-organizer {
  margin-top: 0;
  font-size: 0.75em;
  text-transform: uppercase;
  font-weight: normal;
  letter-spacing: 1px; }
#map-event-list #event-state-name h2 img {
  height: 30px;
  vertical-align: middle; }
#map-event-list #event-state-name h2 span {
  display: inline-block;
  vertical-align: middle;
  color: #ea504e;
  text-transform: uppercase;
  font-size: 19px; }
#map-event-list .event-item-date {
  color: #babbba;
  display: block;
  font-size: 14px; }
#map-event-list h5.event-location {
  font-weight: normal;
  font-size: 0.9em;
  color: #555555; }

#event-nationwide > h4 {
  color: #ea504e;
  border: 2px whitesmoke solid;
  border-width: 10px 0 0;
  padding-top: 22px;
  margin-top: 40px; }

/* For Phones! */
@media only screen and (min-width: 320px) and (max-width: 720px) {
  section {
    padding: 0; }
    section .page-subtitle a {
      display: block !important; }
    section #event-state-name h2 {
      margin-top: 0; }
    section #map-container {
      width: 100% !important;
      float: none !important;
      display: block;
      padding: 0 !important;
      margin: 0; }
    section .state-label {
      font-size: 10px !important; }
    section #map-event-list {
      display: block;
      width: 96% !important;
      margin: 2%;
      margin-top: 0;
      float: none !important; }

  #header li#social-buttons {
    display: block;
    margin-top: 0.7em; }
  #header a#header-logo {
    text-align: center;
    position: relative !important; }
    #header a#header-logo img {
      float: none !important;
      margin-left: 10px;
      height: 35px !important; }
  #header nav {
    text-align: center !important; }
    #header nav ul li:last-child {
      display: block; }
    #header nav .contribute-big {
      padding: 5px 10px;
      margin-top: 12px; } }
@media only screen and (min-width: 720px) and (max-width: 900px) {
  nav ul li {
    padding: 0 10px !important;
    font-size: 11px !important; }
    nav ul li .contribute-big {
      padding: 3px 5px !important; } }

/*# sourceMappingURL=custom.css.map */

